--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@
 
 /* Components First */
 @import "components/status-bar.css";
-
+@import "components/nav-bar.css";
 /* Screens */
 @import "screens/login.css";
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 1000vh;
 }
