Freinds screen temp

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -33,3 +33,14 @@
   left: 15px;
   bottom: 15px;
 }
+
+.nav__notification2 {
+  background-color: tomato;
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  left: 30px;
+  bottom: 27px;
+}
