--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -9,7 +9,10 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .user-component__avatar {
@@ -42,4 +45,9 @@
   margin-top: 8px;
   font-size: 17px;
   color: rgba(0, 0, 0, 0.4);
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 10px;
 }
