--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -13,4 +13,16 @@
 
 .screen-header__icons span {
   margin-left: 25px;
+  position: relative;
+}
+
+.screen-header__notification {
+  background-color: tomato;
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  left: 70px;
+  bottom: 27px;
 }
