--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,12 @@
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
+  font-weight: 600;
 }
 
 .main-screen {
