--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,8 +2,14 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  box-sizing: border-box;
 }
 .status-bar__column {
+  display: flex;
+  position: relative;
   width: 33%;
 }
 .status-bar__column:first-child span {
