--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,13 @@
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
   font-weight: 600;
+  height: 1000vh;
 }
 
 .main-screen {
