--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,6 +1,6 @@
 .alt-header {
   padding: var(--horiziontal-space);
-  margin: 15px 0px;
+  margin: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
