--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -16,13 +16,28 @@
   position: relative;
 }
 
+.gear-container {
+  position: relative;
+}
 .screen-header__notification {
   background-color: tomato;
   display: block;
   width: 5px;
   height: 5px;
   border-radius: 50%;
-  position: absolute;
   left: -2px;
   bottom: 17px;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-gear:hover {
+  animation: rotateCog 2s linear infinite;
 }
