--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
   background-color: #abc1d1;
-  height: 1000vh;
+  height: 500vh;
 }
 #chat-screen .status-bar,
 #chat-screen .alt-header {
@@ -11,12 +11,48 @@
   box-sizing: border-box;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeLeft {
+  from {
+    opacity: 0;
+    transform: translatex(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeRight {
+  from {
+    opacity: 0;
+    transform: translatex(30px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 .main-chat {
-  margin-top: 120px;
+  margin-top: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 14px;
+}
+.main-chat .chat__timestamp {
+  animation: fadeIn 0.3s linear;
 }
 
 .chat__timestamp {
@@ -31,6 +67,11 @@
   width: 100%;
   display: flex;
   margin-bottom: 25px;
+  animation: fadeLeft 0.3s linear;
+}
+
+.message-row:last-child {
+  animation-delay: 0.3s;
 }
 
 .message-row img {
@@ -68,6 +109,8 @@
 
 .message-row--own {
   justify-content: flex-end;
+  opacity: 0;
+  animation: fadeRight 0.3s linear forwards;
 }
 
 .message-row--own .message__bubble {
@@ -92,6 +135,7 @@
   padding: 5px 25px;
   box-sizing: border-box;
   align-items: center;
+  transition: transform 0.3s ease-in-out;
 }
 
 .reply .reply__column:first-child {
@@ -111,18 +155,20 @@
   width: 100%;
   border: var(--main-border);
   border-radius: 20px;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -15px;
+  right: 2px;
   top: 4px;
 }
 
 .reply__column:last-child > i {
-  right: 20px;
-  top: 20px;
+  right: 40px;
+  top: 18px;
 }
 
 .reply__column button {
@@ -140,4 +186,25 @@
 .reply__column button:focus,
 .reply__column button:active {
   outline: none;
+}
+
+.reply .reply__column:first-child,
+.reply .fa-smile-wink,
+.reply button {
+  transition: opacity 0.1s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button {
+  opacity: 0;
+}
+
+.reply:focus-within input {
+  width: 90vw;
+  transform: translateX(-12%) translateY(-80px);
+}
+
+.reply:focus-within {
+  transform: translateY(80px);
 }
