--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -80,6 +80,7 @@
   border-radius: 50%;
   margin-right: 15px;
   background-color: rgba(250, 250, 250, 0.5);
+  object-fit: cover;
 }
 
 .message__author {
